home stretch visually need to fix button orientation and flex

--- a/main.css
+++ b/main.css
@@ -2,15 +2,72 @@ body{
   background-color: bisque;  
 }
 #calculator{
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 400px;
+  width: 402px;
+  height: 484px;
+  border: 2px solid black;
 }
 button{
+  display: flex;
   border: 1px solid black;
+  text-align: center;
+  font-size: xx-large;
   background-color:lightgray ;
+  width: 80px;
+  height: 80px;
+}
+button:hover{
+  background:#ebebeb
+}
+button:active{
+  background:#bbbcbe
 }
 .symbol{
+  color: blanchedalmond;
+ background-color:#df974c;
+}
+.r1, .r2, .r3, .r4, .r5{
+  display: flex;
+  }
+.c1,.c2,.c3,.c4{
+display: flex;
+flex-direction: column;
+width: 400px;
+}
+.c4:hover{
+  background:#dfb07e
+  }
+.c4:active{
+background:#dd8d37;
+}
+#c{
+  display: flex;
 
+}
+.zero{
+  display: flex;
+  flex-grow: 3;
+}
+.c4{
+  color: blanchedalmond;
+  background-color: #df974c;
+}
+input{
+  background-color: black;
+  color: white;
+  font-size: xx-large;
+  size: 80px;
+  width: 400px;
+  height: 80px;
+  border: hidden;
+  text-align: end;
+}
+input:focus{
+  outline: none;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button{
+  -webkit-appearance: none;
+  padding: 5px;
+  border: none;
+  margin: 0px;
 }
